load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "cdktf_lib",
    srcs = ["cdktf.go"],
    embedsrcs = ["package.json"],
    importpath = "github.com/sourcegraph/controller-cdktf/cdktf",
    visibility = ["//visibility:private"],
    deps = [
        "//internal/observability",
        "//internal/output",
        "@com_github_hashicorp_go_version//:go-version",
        "@com_github_hashicorp_hc_install//product",
        "@com_github_hashicorp_hc_install//releases",
        "@com_github_otiai10_copy//:copy",
        "@com_github_sourcegraph_log//:log",
        "@com_github_sourcegraph_run//:run",
        "@com_github_sourcegraph_sourcegraph_lib//errors",
        "@com_github_urfave_cli_v2//:cli",
        "@io_k8s_sigs_yaml//:yaml",
    ],
)

go_binary(
    name = "cdktf",
    embed = [":cdktf_lib"],
    visibility = ["//visibility:public"],
)
