load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "observability",
    srcs = ["logs.go"],
    importpath = "github.com/sourcegraph/controller-cdktf/internal/observability",
    visibility = ["//:__subpackages__"],
    deps = [
        "@com_github_sourcegraph_log//:log",
        "@com_github_sourcegraph_run//:run",
    ],
)
