load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "output",
    srcs = [
        "output.go",
        "renderer.go",
    ],
    importpath = "github.com/sourcegraph/controller-cdktf/internal/output",
    visibility = ["//:__subpackages__"],
    deps = ["@com_github_sourcegraph_sourcegraph_lib//output"],
)
